fix for some spacing issues

--- a/src/css/objects/_objects.headline.scss
+++ b/src/css/objects/_objects.headline.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 .headline {
-  margin-bottom: 70px;
+  // margin-bottom: 70px;
   margin-left: auto;
   margin-right: auto;
   color: $color-headlines;
